# RekT_Protocole

./: .gitignore  README.md
.github/workflows/: BuildAndTestOnPush.yml  PackageReleaseOnMerge.yml
MinimalistRektClient/: Cargo.toml
MinimalistRektClient/src/: main.rs
RektBroker/: BrokerWorkflow.drawio  Cargo.toml  config.toml
RektBroker/src/: config.rs  errors.rs  job_system.rs  main.rs  prelude.rs
RektBroker/src/clients/: client.rs
RektBroker/src/streams/: streams.rs
RektCommon/: Cargo.toml  README.md  bindings.h  build.rs  cbindgen.toml
RektCommon/src/: lib.rs  main.rs  rekt_common_ffi.rs
RektCommon/src/datagrams/: connect_requests.rs  data_request.rs  heartbeat_requests.rs  latency_requests.rs  miscellaneous_requests.rs  mod.rs  object_requests.rs  shutdown_request.rs  topic_request.rs
RektCommon/src/enums/: datagram_type.rs  end_connection_reason.rs  mod.rs  object_request_action.rs  topic_action.rs  topic_actions.rs  topic_response.rs  topics_response.rs
RektCommon/src/libs/: types.rs  utils.rs
RektCommon/src/tests/: datagram_test.rs  mod.rs  unit_test.rs
Sources/: Cargo.toml
Sources/src/: error.rs  main.rs  prelude.rs
Sources/src/datagrams/: connect_requests.rs  data_request.rs  heartbeat_requests.rs  latency_requests.rs  miscelaneous_requests.rs  miscellaneous_requests.rs  mod.rs  object_requests.rs  topic_request.rs
Sources/src/enums/: datagram_type.rs  end_connection_reason.rs  mod.rs  object_request_action.rs  topics_response.rs
Sources/src/libs/: types.rs  utils.rs
Sources/src/tests/: datagram_test.rs  mod.rs  unit_test.rs
