[package]
name = "rekt-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189" , features = ["derive"] }
toml = "0.8.2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
lazy_static = { version = "1.4.0", features = [] }
local-ip-address = "0.5.6"
quiche = "0.18.0"
