[package]
name = "rekt-broker"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = {version ="1.33.0", features = ["full"]} # async
serde = { version = "1.0.189" , features = ["derive"] } # used to read and parse the broker toml config
toml = "0.8.2" # used for the local broker configuration
log = "0.4.20" # dependency of pretty_env_logger
pretty_env_logger = "0.5.0" # logger with clean display
lazy_static = { version = "1.4.0", features = [] } # static var declaration
local-ip-address = "0.6.3" # get local ip-addr to display in the starting procedure
quinn = "0.11.6" # QUIC api
rcgen = "0.13.2" # self-signed certificate
rustls = { version = "*", features = ["quic"] }
thiserror = "2.0.11" # error management and declaration
dashmap = "6.1.0" # concurent hashmap
rekt_lib = { version = "0.1.3" } # REKT PROTOCOL IMPLEMENTATION
rand = "0.9.0" # random nuber generation
bytes = "1.5.0"# byte manipulation
num_cpus = "1.16.0" # Get CPU cores information
crossbeam-queue = "0.3.8" # concurent queues
parking_lot = "0.12.1" # concurent parking lot