[package]
name = "rekt_lib"
version = "0.1.4"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
homepage = "https://github.com/GuicLuca/RekT_Protocole/wiki"
description = "Common lib to use the rekt-protocol. See the crate homepage to check the protocol RFC."
keywords = [
    "RekT-protocol",
    "pub-sub",
    "Network",
    "Masivement-online",
    "broker"
]
categories = ["game-development"]
license = "MIT"

[lib]
crate-type = ["staticlib", "lib"]

[build-dependencies]
cbindgen = "0.26.0"

[dependencies]
log = "0.4.20"
